# neoalchemy

./: .gitignore  CLAUDE.md  CYPHER_SUPPORT.md  Dockerfile  ISSUES.md  README.md  TESTING_IMPLEMENTATION_ORDER.md  TESTING_STRATEGY.md  clear_database.py  pyproject.toml  pytest.ini
.devcontainer/: .dockerignore  .env  Dockerfile  README.md  devcontainer.json  docker-compose.yml  postCreateCommand.sh
.github/workflows/: README.md  ci.yml  integration-tests.yml  unit-tests.yml
docs/: source_tracking.md  source_tracking_implementation.md  testing_levels.md  testing_strategy_simple.md
graph-mcp/: __init__.py  mcp_server.py  models.py  safe_run.py  sourced_models.py  sources.py
graph_mcp/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini  start.sh
graph_mcp/graph_mcp/: __init__.py  __main__.py  mcp_server.py
graph_mcp/graph_mcp/models/: __init__.py  entities.py  relationships.py
graph_mcp/graph_mcp/tools/: __init__.py  entities.py  query.py  relationships.py  schemas.py
graph_mcp/tests/: __init__.py  conftest.py
graph_mcp/tests/e2e/: __init__.py  conftest.py
graph_mcp/tests/e2e/generators/: __init__.py
graph_mcp/tests/e2e/tools/: __init__.py  test_mcp_tools_e2e.py
graph_mcp/tests/integration/: __init__.py  conftest.py
graph_mcp/tests/integration/generators/: __init__.py
graph_mcp/tests/integration/tools/: __init__.py  test_entity_tools_integration.py  test_query_tools_integration.py  test_relationship_tools_integration.py
graph_mcp/tests/unit/: __init__.py  conftest.py
graph_mcp/tests/unit/tools/: __init__.py  test_entity_tools_unit.py
neoalchemy/: __init__.py  __main__.py  constraints.py  expressions.py  field_registration.py  models.py  query.py  repository.py  sources.py  state.py
neoalchemy/core/: __init__.py  field_registration.py  state.py
neoalchemy/core/cypher/: __init__.py  query.py
neoalchemy/core/cypher/core/: __init__.py  keywords.py
neoalchemy/core/cypher/elements/: __init__.py  basic.py  clauses.py  element.py  patterns.py
neoalchemy/core/expressions/: __init__.py  adapter.py  base.py  fields.py  functions.py  logical.py  operators.py
neoalchemy/orm/: __init__.py  constraints.py  fields.py  models.py  query.py  repository.py
neoalchemy/orm/tracking/: __init__.py  sources.py
neoalchemy/utils/: __init__.py  database.py
tests/: conftest.py  models.py  test_e2e.py  test_expressions.py  test_models.py  test_utils.py
tests/e2e/: __init__.py  conftest.py  shared_models.py  test_complete_orm_workflows.py  test_complex_relationship_traversal.py  test_constraints.py  test_error_handling_scenarios.py  test_expressions.py  test_integration.py  test_knowledge_graph_workflows.py  test_simple_e2e.py
tests/e2e/test_tracking/: __init__.py  test_sources.py
tests/integration/: README.md  __init__.py  conftest.py  shared_models.py  test_helpers.py  test_model_field_integration.py  test_querybuilder_cypher_integration.py  test_relationship_operations.py  test_transaction_repository_integration.py  test_working_integration.py
tests/integration/orm/: __init__.py  test_constraints.py  test_repository.py  test_tracking.py
tests/unit/: conftest.py  test_constraints.py  test_cypher.py  test_cypher_element.py  test_expression_base.py  test_field_registration.py  test_isolation.py  test_models.py  test_orm_constraints.py  test_utils.py
tests/unit/core/: test_state.py
tests/unit/core/cypher/: test_query.py
tests/unit/core/expressions/: test_adapter.py  test_fields.py  test_functions.py  test_logical.py
tests/unit/orm/: test_fields.py
tests/unit/test_tracking/: __init__.py  test_repository.py  test_sources.py
