[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graph-mcp"
version = "0.1.0"
description = "FastMCP server for AI integration with Neo4j graph databases"
authors = [
    {name = "NeoAlchemy Team"}
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "neo4j>=5.15.0",
    "pydantic>=2.0.0",
    "neoalchemy @ file:///Users/bruk.habtu/src/neoalchemy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
graph-mcp = "graph_mcp.__main__:main_entry"


[tool.hatch.build.targets.wheel]
packages = ["graph_mcp"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pytest-asyncio>=1.0.0",
]
